--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "movingsquare",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/home/runner/movingsquare-2/server.js",
   "scripts": {
-    "start" : "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/caleb1248/movingSquare-2#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "iconv-lite": "^0.6.3",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
